# AstralogMockStandardTrack-main

./: CMakeLists.txt
.github/workflows/: cmake.yml  github-actions-demo.yml
